// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot after data has been loaded 1`] = `
<div>
  <nav
    aria-label="Breadcrumbs"
    role="navigation"
  >
    <ol
      class="breadcrumbs"
    >
      <li
        class="breadcrumbs__crumb"
      >
        <a
          data-qa-sel="breadcrumb-administration-link"
          href="/"
        >
          Administration
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <a
          data-qa-sel="breadcrumb-organisation-link"
          href="/organisations"
        >
          Organisations
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <span>
          TEST
        </span>
      </li>
    </ol>
  </nav>
  <script
    type="application/ld+json"
  >
    {
  "@context": "http://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "position": 1,
      "item": {
        "@id": "/",
        "name": "Administration"
      }
    },
    {
      "@type": "ListItem",
      "position": 2,
      "item": {
        "@id": "/organisations",
        "name": "Organisations"
      }
    },
    {
      "@type": "ListItem",
      "position": 3,
      "item": {
        "name": "TEST"
      }
    }
  ]
}
  </script>
  <div
    class="page-header mb--d"
  >
    <h1
      class="page-header__heading"
    >
      TEST
    </h1>
    <p
      class="page-header__cta"
    >
      <a
        class="btn btn--cta"
        data-qa-sel="edit-organisation-button"
        href="/organisations/1/edit"
      >
        Edit organisation
      </a>
      <a
        class="btn"
        data-qa-sel="edit-organisations-users-button"
        href="/organisations/1/users"
      >
        Edit users
      </a>
    </p>
  </div>
  <div
    class="grid"
  >
    <div
      aria-busy="false"
      data-g="12 md:9"
    >
      <div
        class="summaryList pv--c"
      >
        <span
          class="summaryListLabel"
        >
          Date added
        </span>
        <span
          class="summaryListDetail"
          data-qa-sel="dateAdded-organisation"
        >
          19 January 2022 17:05
        </span>
      </div>
      <p>
        There are currently no users assigned to this organisation.
      </p>
    </div>
  </div>
  <hr
    class="mv--b"
  />
  <h2
    class="h3"
  >
    Permanently delete this organisation
  </h2>
  <p>
    This organisation will no longer be available, and all associated data will be permanently deleted.
  </p>
  <a
    class="pv--c mb--d"
    data-qa-sel="delete-organisation-link"
    href="/organisations/1/delete"
    style="display: inline-block;"
  >
    Delete organisation
  </a>
</div>
`;

exports[`should show error message when fetch returns 401 error 1`] = `
<div>
  <nav
    aria-label="Breadcrumbs"
    role="navigation"
  >
    <ol
      class="breadcrumbs"
    >
      <li
        class="breadcrumbs__crumb"
      >
        <a
          data-qa-sel="breadcrumb-administration-link"
          href="/"
        >
          Administration
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <a
          data-qa-sel="breadcrumb-organisation-link"
          href="/organisations"
        >
          Organisations
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <span>
          Error
        </span>
      </li>
    </ol>
  </nav>
  <script
    type="application/ld+json"
  >
    {
  "@context": "http://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "position": 1,
      "item": {
        "@id": "/",
        "name": "Administration"
      }
    },
    {
      "@type": "ListItem",
      "position": 2,
      "item": {
        "@id": "/organisations",
        "name": "Organisations"
      }
    },
    {
      "@type": "ListItem",
      "position": 3,
      "item": {
        "name": "Error"
      }
    }
  ]
}
  </script>
  <div
    class="page-header"
  >
    <h1
      class="page-header__heading"
    >
      Error
    </h1>
  </div>
  <div
    class="alert alert--error"
    role="alert"
  >
    <h2>
      Whoops
    </h2>
    <p>
      Sorry, there's been an error!
    </p>
  </div>
</div>
`;

exports[`should show error message when fetch returns 500 error 1`] = `
<div>
  <nav
    aria-label="Breadcrumbs"
    role="navigation"
  >
    <ol
      class="breadcrumbs"
    >
      <li
        class="breadcrumbs__crumb"
      >
        <a
          data-qa-sel="breadcrumb-administration-link"
          href="/"
        >
          Administration
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <a
          data-qa-sel="breadcrumb-organisation-link"
          href="/organisations"
        >
          Organisations
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <span>
          Error
        </span>
      </li>
    </ol>
  </nav>
  <script
    type="application/ld+json"
  >
    {
  "@context": "http://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "position": 1,
      "item": {
        "@id": "/",
        "name": "Administration"
      }
    },
    {
      "@type": "ListItem",
      "position": 2,
      "item": {
        "@id": "/organisations",
        "name": "Organisations"
      }
    },
    {
      "@type": "ListItem",
      "position": 3,
      "item": {
        "name": "Error"
      }
    }
  ]
}
  </script>
  <div
    class="page-header"
  >
    <h1
      class="page-header__heading"
    >
      Error
    </h1>
  </div>
  <div
    class="alert alert--error"
    role="alert"
  >
    <h2>
      Whoops
    </h2>
    <p>
      Sorry, there's been an error!
    </p>
  </div>
</div>
`;
